--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.6.1
 pydantic_core==2.16.2
+PyMySQL==1.1.1
 python-jose==3.3.0
 python-multipart==0.0.9
 pytz==2024.1
